--- a/desktop-app/src/assets/css/console.css
+++ b/desktop-app/src/assets/css/console.css
@@ -21,3 +21,17 @@
     bottom: 0;
     background-color: white;
 }
+
+.console::-webkit-scrollbar {
+    width: 12px;
+}
+
+.console::-webkit-scrollbar-thumb {
+    background-color: rgb(199, 199, 204);
+    border: 2px solid rgb(255, 255, 255);
+}
+
+.console::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(188, 188, 189);
+    border: 1px solid rgb(188, 188, 189);
+}
